plugins {
    id 'org.jetbrains.intellij' version '0.4.15'
}

group 'com.swissas.tala'
version '1.6.2'

apply plugin: 'java'
sourceCompatibility = JavaVersion.VERSION_11

repositories {
    mavenCentral()
}


dependencies {
    testCompile group:'org.junit.jupiter', name:'junit-jupiter-api', version: '5.2.0'
    testCompile group:'org.junit.jupiter', name:'junit-jupiter-params', version: '5.2.0'
    testRuntime group:'org.junit.jupiter', name:'junit-jupiter-engine', version: '5.2.0'
    testCompile group: 'org.assertj', name: 'assertj-core', version:'3.11.0'
    testCompile group: 'org.mockito', name: 'mockito-core', version: '2.1.0'
    compile group: 'org.jsoup', name: 'jsoup', version: '1.11.3'
    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.9'
    compile group: 'javax.mail', name: 'mail', version: '1.4.7'
}
// See https://github.com/JetBrains/gradle-intellij-plugin/
apply plugin: 'org.jetbrains.intellij'
intellij {
    downloadSources true
    intellij.updateSinceUntilBuild false
    plugins 'java', 'properties', 'svn4idea', 'git4idea'

}

test {
    useJUnitPlatform()
}

publishPlugin {
    token intellijPublishToken //variable defined in the gradle.properties file
}

patchPluginXml {
    changeNotes """
<b>V1.6.2</b><pre>
Fixed some small bugs and removed some code warnings
Changed the fix release blocker button logic to prevent potential miss-click
</pre>
<b>V1.6.1</b><pre>
Don't check for graphical UI changes in the unpublic folders
Adapt some part of the code based on feedback of Sergey Ignatov and Vladimir Schneider (thanks for helping)
Send the mail only once the commit was confirmed
Add some basic validation on the settings panel
Sort the list of reviewer and exclude yourself from the list
Improve the regex to detect support case number
</pre>
<b>V1.6.0</b><pre>Use combobox for the LetterCode information menu
Add picture in LetterCode information menu
Add Who is this in the Annotate menu
Add show support case within the Annotate menu
Add show review within the Annotate menu
Add new configurations in the settings menu
Add precommit code review condition (configurable in the settings menu)
Add Inform QA/Support/Documentation per mail if Client/Web changes
Add possibility to add picture to the Information Mail per drag and drop (copy paste is not yet workin with intellij)
Disable inspection, bulb and SAS warning on non SAS projects 
Adapt the lamp logic to be smarter : red => the branch you are is broken, yellow => another branch is broken, green => all is ok
Show the lamp color of the branch you currently are working
Adapt the plugin to be ready for loading without IntelliJ restart (planned for 2020.1)
Important Code cleaning.
</pre>
<b>V1.5.13</b><pre>exclude annotation and fireIndexedPropertyChange from missing translation</pre>
<b>V1.5.12</b><pre>fix a bug in the Information about a lettercode menu
Fixed a bug in the "Only check changed lines" logic
Fixed a bug that added a translated import twice
Detects NOSOL issue and the quickfix to mark it as NOSOL
<b>V1.5.11</b><pre>add a new menu entry to get information about a given Letter Code
fixed incompatibility with Intellij 2019.3 (github issue #2 Thanks Roman for the information)</pre>
<b>V1.5.10</b><pre>Prevent exception from happening when the traffic light URL is null (in case of QA Failing tests)
Prevent exception on CTRL + mouse hover on older stable
Prevent translating any kind of String containing only a filename with a 3 letter extension
Use newer save action logic (thanks to 
Revert back to one setting for all projects (you may need to configure back the settings)
</pre>
<b>V1.5.9</b><pre>Add missing translation quickfix in case of array initialization code for ex <code>Charsequence[] array = new Charsequence[]{"one string tro translate"}</code>
Fix an issue that new files where not checked for missing translation
Add "fix release blocker" option in the pre commit dialog
</pre>
<b>V1.5.8</b><pre>Add an option to only check for missing translation on changed line (prevent having file with tons of warnings)
Fix a false positive missing translation on exeption with concatenation
Don't warn about missing translation in firePropertyChange
Disable the unused suppress annotation as it current implementation is not working correctly
</pre>
<b>V1.5.7</b><pre>Fix a potential NPE
Add a dependency for validation of jetbrains repository
</pre>
<b>V1.5.6</b><pre>Implement the find by usage for the Properties file
Fixed a small mistake in the configuration storage
Better warning icons for dark mode
Adapt gradle built script for 2019.2.
Fixed plugin home page and vendor name
</pre>
<b>V1.5.5</b><pre>Auto import was not working correctly when fixing all missing translation
Constants where not replaced with %s during translation
Missing translation was missing following case : booleanValue ? "one not translated string" : "another not translated string"</pre>
<b>V1.5.4</b><pre>CTRL + click on Translatable will now open the Standard.properties instead of the _Message class
Save Properties the right way (undo/redo will work)
Only add the translate and tooltip quickfixes for amos 19.6 and preview (old amos only have the NO_EXT option)
Fixed some small bugs
</pre>
<b>V1.5.3</b><pre>important performance fix in the translate inspection
Fix several small bugs
Refactor some code to make it a lot more easier to understand
Separate UI from Configuration</pre>
<b>V1.5.2</b><pre>Redesign the configuration panel and add an option to limit the translation warning to a specific length (per default 5)
The Letter code field is now an autocompleted combobox
Don't show translation warnings for TestClasses, Loggers, assertEquals, withHistory methods and for .tpl file name
Fix errors in the translation key generation :  all non alphanumeric chars are now filtered!
Automatically import the generated translation
Rename the plugin as there was a typo in the name
</pre>
<b>V1.5.1</b><pre>Generated translation always use the amos/share/multiLanguage/Standards known key words
Translation will auto correct common mistakes (for ex work order instead of Workorder)
Fix a bug in the class owner logic
Fix a bug in the translation process resulting with two %s
</pre>
<b>V1.5</b><pre>CTRL + mouse over on MULTILANGUE_TXT or MULTILANGUE_TT to display it translation
Add inspection that checks for missing Translation with 3 quickfixes (add NO_EXT / Translate / Translate tooltip)
Add a mouse menu to show author information
Change the way the plugin know the icons and add a plugin icon
Settings saved per project
Various small code changes
</pre>
<b>V1.4.3</b><pre>Fix the predefined size of the pre commit error message as the editorPane is not capable to calculate it</pre>
<b>V1.4.2:</b><pre>Pre commit message is now a custom dialog where user can see the traffic light message and click on it
Fix dark mode bulb color</pre>
<b>V1.4.1:</b><pre>Fix some plugin exceptions (mostly in the traffic light)
Traffic light shows the reason of the color on mouse over</pre>
<b>V1.4  :</b><pre>Apply menu changes without require a restart (for ex to see coworker findings)
Add an option to be warned when commit can be done after a non green commit warning
Fix the histeric blinking lamp</pre>
<b>V1.3.1:</b><pre>Fix an exception for IntelliJ 2017 as an Interface is defined differently in 2018 version</pre>
<b>V1.3  :</b><pre>Use properties files for urls and i18n<br>Better way to save settings<br>Automatically add this to instance fields<br>Automatically add @override to overriden methods<br>Automatically add @author to classes without it<br>Automatically remove suppress warning if no warning is present</pre><br>
<b>V1.2  :</b><pre>Check for traffic light before commit, fix some small bugs</pre><br>
<b>V1.1  :</b><pre>Adapt the gradle build to prevent having a minimum version of IntelliJ</pre><br>
<b>V1.0  :</b><pre>First release</pre>"""
}